 * Cache the user object

2009-04-20 tdb
 * Removed broken/superfluous replication of require
 * Added rename_field() method to Database.pm to rename meta fields

2009-04-22 tdb
 * MetaFields can now subclass new()
 * Added register_field/unregister_field methods to DataSet
 * Rename Web metafields
 * Construct/deconstruct compound fields from other (prefix-named) fields

2009-04-30 tmb
 * Added hook to allow/deny Web sign-ups from particular email domains

2009-05-11 cjg
 * Turned Search::Condition into a bunch of subclasses.

2009-05-12 cjg
 * First draft of a REST interface.

2009-05-12 tdb
 * Reduced number of indexed fields in eprint and fixed indexing counts
 * Added Bigint metafield type (64bit integer)

2009-05-12 cjg
 * Optimise conditions now return an optimised condition rather than modify
    the current object.

2009-05-13 tdb
 * Added ability to change the order documents are shown in

2009-05-13 cjg
 * Cleanup and bugfixes on new Search::Condition objects.

2009-05-13 cjg
 * Added $session to has_phrase calls.

2009-05-17 cjg
 * Added handling for PUT request data to Session
 * Added priv handling to REST interface
 * REST interface now supports PUT, on basic .txt fields.

2009-05-17 tdb
 * Fixed importing of files pointing to the wrong parent object.

2009-05-17 cjg
 * Fixed broken call in cgi/rest

2009-05-17 sf
 * Fixed file corruption problem on SWORD + removed some commnents

2009-05-26 tdb
 * Fixed MySQL-quoted commands in epadmin upgrade [Alexander Bergolth]

2009-05-27 tdb
 * Fixed login page not using phrase for title

2009-05-27 tdb
 * Fixed spurious history objects being created on document upload
 * Modified DataObj to clear changed fields after commit

2009-05-27 tdb
 * To supply file data to a File object use "_content", which can take
    a sub, file handle or scalar reference.
 * Storage controller will now write content to all configured plugins

2009-05-28 tdb
 * Fixed an HTML insertion bug in the <title> element [Brian D. Gregg]
