@@ -56,90 +56,121 @@ Deprecated, use *_repository_*.
 
 package EPrints::Config;
 
-use EPrints;
-
-use Data::Dumper;
-use Cwd;
-
+use warnings;
 use strict;
 
-BEGIN { sub abort { return EPrints::abort( @_ ); } }
-
-my %SYSTEMCONF;
+my $SYSTEMCONF = $EPrints::SystemSettings::conf;
 my @LANGLIST;
 my @SUPPORTEDLANGLIST;
 my %ARCHIVES;
 #my %ARCHIVEMAP;
-my $INIT = 0; 
 
+# deprecated support for abort()
+sub abort { &EPrints::abort( @_ ) }
 
-######################################################################
-=pod
-
-=item EPrints::Config::ensure_init()
-
-If the init() method has not yet been called then call it, otherwise
-do nothing.
-
-=cut
-######################################################################
-
-sub ensure_init
-{
-	return if( $INIT );
-	init();
-}
-
+# deprecated
+sub ensure_init {}
 
 ######################################################################
 =pod
 
 =item EPrints::Config::init()
 
-Load all the EPrints configuration files, first the general files
-such as SystemSettings and then the configurations
-for each repository.
+Load the EPrints configuration.
+
+Do not use this method directly, it will be automatically called
+when using EPrints.
 
 =cut
 ######################################################################
 
 sub init
 {
-	if( $INIT )
-	{
-		print STDERR "init() called after config already loaded\n";
-		return;
-	}
-
-	$INIT = 1;
-
-	foreach( keys %{$EPrints::SystemSettings::conf} )
-	{
-		$SYSTEMCONF{$_} = $EPrints::SystemSettings::conf->{$_};
-	}
 	# cjg Should these be hardwired? Probably they should.
-	$SYSTEMCONF{cgi_path} = $SYSTEMCONF{base_path}."/cgi";
-	$SYSTEMCONF{cfg_path} = $SYSTEMCONF{base_path}."/cfg";
-	$SYSTEMCONF{lib_path} = $SYSTEMCONF{base_path}."/lib";
-	$SYSTEMCONF{arc_path} = $SYSTEMCONF{base_path}."/archives";
-	$SYSTEMCONF{bin_path} = $SYSTEMCONF{base_path}."/bin";
-	$SYSTEMCONF{var_path} = $SYSTEMCONF{base_path}."/var";
+	$SYSTEMCONF->{cgi_path} = $SYSTEMCONF->{base_path}."/cgi";
+	$SYSTEMCONF->{cfg_path} = $SYSTEMCONF->{base_path}."/cfg";
+	$SYSTEMCONF->{lib_path} = $SYSTEMCONF->{base_path}."/lib";
+	$SYSTEMCONF->{arc_path} = $SYSTEMCONF->{base_path}."/archives";
+	$SYSTEMCONF->{bin_path} = $SYSTEMCONF->{base_path}."/bin";
+	$SYSTEMCONF->{var_path} = $SYSTEMCONF->{base_path}."/var";
 	
 	###############################################
 	
-	opendir( CFG, $SYSTEMCONF{arc_path} );
-	my $file;
-	while( $file = readdir( CFG ) )
+	$SYSTEMCONF->{repository} = {};
+
+	load_system_config();
+
+	opendir( CFG, $SYSTEMCONF->{arc_path} );
+	my $id;
+	while( $id = readdir( CFG ) )
 	{
-		next if( $file =~ m/^\./ );
-		next if( !-d $SYSTEMCONF{arc_path}."/".$file );
+		next if( $id =~ m/^\./ );
+		next if( !-d $SYSTEMCONF->{arc_path}."/".$id );
+		next if $SYSTEMCONF->{repository}->{$id} && $SYSTEMCONF->{repository}->{$id}->{disabled};
 		
-		$ARCHIVES{$file} = {};
+		$ARCHIVES{$id} = {};
 	}
 	closedir( CFG );
 }
 
-	
+=item EPrints::Config::load_system_config()
+
+Load the system configuration files.
+
+=cut
+
+sub load_system_config
+{
+	my $dir = $SYSTEMCONF->{"lib_path"}."/cfg.d";
+
+	$SYSTEMCONF->{set_in} = {};
+	$SYSTEMCONF->{set_in}->{$_} = "EPrints::SystemSettings"
+		for keys %$SYSTEMCONF;
+
+	opendir(my $dh, $dir) or EPrints::abort( "Error opening config directory $dir: $!" );
+	foreach my $file (sort readdir($dh))
+	{
+		next if $file =~ /^\./;
+		next unless $file =~ /\.pl$/;
+
+		my $filepath = "$dir/$file";
+
+		open(my $fh, "<", $filepath) or EPrints::abort( "Error reading from $filepath: $!" );
+
+		my $perl = <<EOP;
+package EPrints::SystemSettings;
+
+our \$c = \$EPrints::SystemSettings::conf;
+
+EOP
+		$perl .= join "", <$fh>;
+		close($fh);
+
+		eval $perl;
+		if( $@ )
+		{
+			my $errors = "error in $filepath:\n$@";
+			print STDERR <<END;
+------------------------------------------------------------------
+---------------- EPrints System Error ----------------------------
+------------------------------------------------------------------
+Failed to load system config
+Errors follow:
+------------------------------------------------------------------
+$errors
+------------------------------------------------------------------
+END
+			exit(1);
+		}
+
+		for(keys %$SYSTEMCONF)
+		{
+			next if exists $SYSTEMCONF->{set_in}->{$_};
+			$SYSTEMCONF->{set_in}->{$_} = $filepath;
+		}
+	}
+	closedir($dh);
+}
 
 ######################################################################
 =pod
@@ -156,8 +187,6 @@ sub get_archive_config { return get_repository_config( @_ ); }
 sub get_repository_config
 {
 	my( $id ) = @_;
-
-	ensure_init();
 
 	return $ARCHIVES{$id};
 }
@@ -179,8 +208,6 @@ sub get_archive_ids { return get_repository_ids(); }
 
 sub get_repository_ids
 {
-	ensure_init();
-
 	return keys %ARCHIVES;
 }
 
@@ -204,14 +231,9 @@ sub load_repository_config_module
 {
 	my( $id ) = @_;
 
-	ensure_init();
-
 	my $info = {};
-	no strict 'refs';
-	eval '$EPrints::Config::'.$id.'::config = $info';
-	use strict 'refs';
 	
-	foreach( keys %SYSTEMCONF ) { $info->{$_} = $SYSTEMCONF{$_}; }
+	%$info = %$SYSTEMCONF;
 	$info->{archiveroot} = $info->{arc_path}."/".$id;
 
 	if( !-d $info->{archiveroot} )
@@ -219,6 +241,16 @@ sub load_repository_config_module
 		print STDERR "No repository named '$id' found in ".$info->{arc_path}.".\n\n";
 		exit 1;
 	}
+
+	if( !exists $ARCHIVES{$id} )
+	{
+		print STDERR "Repository named '$id' disabled by configuration.\n";
+		exit 1;
+	}
+
+	no strict 'refs';
+	eval '$EPrints::Config::'.$id.'::config = $info';
+	use strict 'refs';
 
 	my @oldinc = @INC;
 	local @INC;
@@ -312,9 +344,7 @@ sub get
 {
 	my( $confitem ) = @_;
 
-	ensure_init();
-
-	return $SYSTEMCONF{$confitem};
+	return $SYSTEMCONF->{$confitem};
 }
 
 1;
